# synopsis

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  synopsis.py
examples/: sfi_rules.srd
include/: ASDPDB.hpp  ASDS.hpp  ApplicationModule.hpp  Clock.hpp  DownlinkPlanner.hpp  DpDbMsg.hpp  DpMsg.hpp  LinuxClock.hpp  Logger.hpp  MaxMarginalRelevanceDownlinkPlanner.hpp  PassthroughASDS.hpp  RuleAST.hpp  Similarity.hpp  SqliteASDPDB.hpp  StdLogger.hpp  Timer.hpp  itc_synopsis_bridge.h  itc_synopsis_bridge.hpp  synopsis.h  synopsis.hpp  synopsis_sql.hpp  synopsis_types.hpp
python/synopsis/: rule_ast.py  rule_parser.py
src/: ASDS.cpp  DownlinkPlanner.cpp  DpDbMsg.cpp  DpMsg.cpp  LinuxClock.cpp  MaxMarginalRelevanceDownlinkPlanner.cpp  PassthroughASDS.cpp  RuleAST.cpp  Similarity.cpp  Sqlite3Statement.cpp  SqliteASDPDB.cpp  StdLogger.cpp  Timer.cpp  itc_synopsis_bridge.cpp  itc_synopsis_bridge_oldwrap.cpp  syn_owls.py  synopsis.cc  synopsis.cpp
test/: itc_synopsis_test.cpp  synopsis_test.cc  synopsis_test.cpp
test/data/: dd_example_rules.json  dd_example_rules.srd
